--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ctx-core/tempfile",
-	"version": "1.0.105",
+	"version": "1.1.0",
 	"description": "Simple functions to create tempfiles",
 	"keywords": [
 		"ctx-core",
@@ -17,9 +17,13 @@
 	"license": "Apache-2.0",
 	"author": "Brian Takita",
 	"type": "module",
-	"types": "./src/index.d.ts",
+	"files": [
+		"*.d.ts",
+		"./tempfile_"
+	],
+	"types": "./index.d.ts",
 	"exports": {
-		".": "./src/index.js",
+		".": "./index.js",
 		"./package.json": "./package.json"
 	},
 	"scripts": {
@@ -32,10 +36,10 @@
 		"test-unit-coverage": "c8 pnpm test-unit"
 	},
 	"dependencies": {
-		"@ctx-core/crypto": "^1.2.22",
-		"@ctx-core/dom": "^15.0.7",
-		"@ctx-core/string": "^12.3.26",
-		"@ctx-core/uri": "^12.4.62"
+		"@ctx-core/crypto": "^1.3.0",
+		"@ctx-core/dom": "^15.1.0",
+		"@ctx-core/string": "^12.4.0",
+		"@ctx-core/uri": "^12.5.0"
 	},
 	"devDependencies": {
 		"c8": "^8.0.1",
