--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ctx-core/tempfile",
-	"version": "1.1.1",
+	"version": "1.1.2",
 	"description": "Simple functions to create tempfiles",
 	"keywords": [
 		"ctx-core",
@@ -19,6 +19,7 @@
 	"type": "module",
 	"files": [
 		"*.d.ts",
+		"*.json",
 		"./tempfile_"
 	],
 	"types": "./index.d.ts",
@@ -36,10 +37,10 @@
 		"test-unit-coverage": "c8 pnpm test-unit"
 	},
 	"dependencies": {
-		"@ctx-core/crypto": "^1.3.1",
-		"@ctx-core/dom": "^15.1.1",
-		"@ctx-core/string": "^12.4.1",
-		"@ctx-core/uri": "^12.5.1"
+		"@ctx-core/crypto": "^1.3.2",
+		"@ctx-core/dom": "^15.1.2",
+		"@ctx-core/string": "^12.4.2",
+		"@ctx-core/uri": "^12.5.2"
 	},
 	"devDependencies": {
 		"c8": "^8.0.1",
