--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ctx-core/tempfile",
-	"version": "1.1.33",
+	"version": "1.2.0",
 	"description": "Simple functions to create tempfiles",
 	"keywords": [
 		"ctx-core",
@@ -21,7 +21,7 @@
 		"*.d.ts",
 		"*.js",
 		"*.json",
-		"./tempfile_"
+		"./tempfile_path"
 	],
 	"types": "./index.d.ts",
 	"exports": {
@@ -38,10 +38,8 @@
 		"test-unit-coverage": "c8 pnpm test-unit"
 	},
 	"dependencies": {
-		"@ctx-core/crypto": "^1.3.33",
 		"@ctx-core/dom": "^15.1.33",
-		"@ctx-core/string": "^12.4.33",
-		"@ctx-core/uri": "^12.5.33"
+		"ctx-core": "^4.8.2"
 	},
 	"devDependencies": {
 		"c8": "^8.0.1",
