--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ctx-core/tempfile",
-	"version": "1.2.33",
+	"version": "1.2.34",
 	"description": "Simple functions to create tempfiles",
 	"keywords": [
 		"ctx-core",
@@ -20,8 +20,7 @@
 	"files": [
 		"*.d.ts",
 		"*.js",
-		"*.json",
-		"./tempfile_path"
+		"*.json"
 	],
 	"types": "./index.d.ts",
 	"exports": {
@@ -38,8 +37,7 @@
 		"test-unit-coverage": "c8 pnpm test-unit"
 	},
 	"dependencies": {
-		"@ctx-core/dom": "^15.1.54",
-		"ctx-core": "^4.17.0"
+		"ctx-core": "^4.18.0"
 	},
 	"devDependencies": {
 		"c8": "^8.0.1",
